Fix vertical align cards tobottom

--- a/src/scss/_plans.scss
+++ b/src/scss/_plans.scss
@@ -2,6 +2,8 @@
 
 .plans {
   position: relative;
+  width: 100%;
+  heigth: auto;
 
   img {
     width: 100%;
@@ -32,23 +34,17 @@
   width: 85.651537335vw;
   top: 17.276720351vw;
   left: 7.174231332vw;
-  z-index: 1;
-  float: left;
-  //overflow: hidden;
+  //z-index: 1;
+  //float: left;
+  overflow: hidden;
 
 
   .cards {
+    display: table;
     position: relative;
-    margin: 0;
-    padding: 0;
-    left: 0;
-    height: 25.475841874vw;
-    width: 85.651537335vw;
-    bottom: 0;
-    //top: 0;
-    vertical-align: bottom;
-    //overflow: hidden;
-    float: left;
+    width: 100%;
+    height: 100%;
+    //background-color: #dadada;
 
     hr {
       width: 15.300878477vw;
@@ -58,24 +54,47 @@
     }
   }
 
+  .conteiner_bottom {
+    display: table-cell;
+    vertical-align: bottom;
+    // position: absolute;
+    // bottom: 0;
+    margin: 0;
+    padding: 0;
+  }
 
   .card {
-    position: relative;
-    bottom: 0;
-    width: 20.351390922vw;
-    background-color: #000;
-    display: inline-block;
-    opacity: 0.65;
     border-top: 0.439238653vw solid #6BD816;
-    vertical-align: bottom;
+    position: relative;
+    opacity: 0.65;
+    //list-style: none;
+    display: block;
+    background-color: #000;
     float: left;
+    width: 20.351390922401173vw;
+    margin-right: 1.390922401171303vw;
+    margin-bottom: 0;
+
+
+
+  }
+
+  .card {
+    //display: table-cell;
+    //bottom: 0;
+    //position: relative;
+    //width: 20.351390922vw;
+    //
+    //background-color: #000;
+    //display: inline-block;
+    //opacity: 0.65;
+    //border-top: 0.439238653vw solid #6BD816;
+    //vertical-align: bottom;
+    //float: left;
     //overflow: hidden;
     //margin-right: 1.4641288433382138vw;
-
-    .conteiner_bottom {
-      position: absolute;
-      bottom: 0;
-    }
+    //clear: both;
+    //z-index: 99;
 
     .card_list {
       font-family: $font-label-light;
@@ -114,6 +133,7 @@
       margin-top: 4.411420205vw;
       margin-left: 2.562225476vw;
       margin-bottom: 2.049780381vw;
+      width: 14.202049780380674vw;
     }
   }
 
@@ -124,6 +144,7 @@
       margin-top: 3.001464128843338vw;
       margin-left: 2.562225476vw;
       margin-bottom: 2.049780381vw;
+      width: 14.202049780380674vw;
     }
   }
 
@@ -134,6 +155,7 @@
       margin-top: 4.251830161054173vw;
       margin-left: 2.562225476vw;
       margin-bottom: 2.049780381vw;
+      width: 13.396778916544655vw;
     }
   }
 
@@ -144,15 +166,24 @@
       margin-top: 2.4158125915080526vw;
       margin-left: 2.562225476vw;
       margin-bottom: 2.049780381vw;
+      width: 12.811127379209369vw;
     }
   }
 
-  .card:nth-child(1), .card:nth-child(2), .card:nth-child(3) {
-    margin-right: 1.390922401171303vw;
-    margin-left: 0;
-    //margin: 0;
-    padding: 0;
+  .card:last-child {
+    margin-right: 0;
   }
+
+  //
+  //.card:nth-child(1), .card:nth-child(2), .card:nth-child(3) {
+  //  margin-right: 1.390922401171303vw;
+  //  //position: absolute;
+  //  margin-left: 0;
+  //  //margin: 0;
+  //  padding: 0;
+  //  //bottom: 0;
+  //  //vertical-align: bottom;
+  //}
 
 
   
